<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textviewHistory"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center|end"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/textviewResult"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center|end"
            android:backgroundTint="@color/white"
            android:text="@string/number0"
            android:textColor="@color/black"
            android:textSize="60sp"

            />

        >
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:rowCount="5">

        <Button
            android:id="@+id/btnAC"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="0"

            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="#D3D2CF"
            android:text="@string/AC"
            android:textColor="#494949"
            android:textSize="40sp"></Button>

        <Button
            android:id="@+id/btnDel"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="#D3D2CF"
            android:text="@string/DEL"
            android:textColor="#494949"
            android:textSize="40sp"></Button>

        <Button
            android:id="@+id/btnChia"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="#F19307"
            android:text="@string/chia"
            android:textColor="#494949"
            android:textSize="40sp"></Button>

        <Button
            android:id="@+id/btnPercent"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="#D3D2CF"
            android:text="@string/phanTram"
            android:textColor="#494949"
            android:textSize="40sp"></Button>

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/number7"
            android:textColor="#494949"
            android:textSize="40sp"></Button>

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/number8"
            android:textColor="#494949"
            android:textSize="40sp"></Button>

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/number9"
            android:textColor="#494949"
            android:textSize="40sp"></Button>

        <Button
            android:id="@+id/btnNhan"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="#F19307"
            android:text="@string/nhan"
            android:textColor="#494949"
            android:textSize="40sp"
            app:backgroundTint="#F19307"></Button>

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/number4"
            android:textColor="#494949"
            android:textSize="40sp"></Button>

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/number5"
            android:textColor="#494949"
            android:textSize="40sp"></Button>

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/number6"
            android:textColor="#494949"
            android:textSize="40sp"></Button>

        <Button
            android:id="@+id/btnTru"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="#F19307"
            android:text="@string/tru"
            android:textColor="#494949"
            android:textSize="40sp"></Button>

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/number1"
            android:textColor="#494949"
            android:textSize="40sp"></Button>

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/number2"
            android:textColor="#494949"
            android:textSize="40sp"></Button>

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/number3"
            android:textColor="#494949"
            android:textSize="40sp"></Button>

        <Button
            android:id="@+id/btnCong"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="#F19307"
            android:text="@string/cong"
            android:textColor="#494949"
            android:textSize="40sp"></Button>

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/number0"
            android:textColor="#494949"
            android:textSize="40sp"></Button>

        <Button
            android:id="@+id/btnCham"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/cham"
            android:textColor="#494949"
            android:textSize="40sp"></Button>

        <Button
            android:id="@+id/btnBang"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:backgroundTint="#F19307"
            android:text="@string/bang"
            android:textColor="#494949"
            android:textSize="40sp"></Button>


    </GridLayout>

</LinearLayout>